# PhysicsFlow

./: .gitignore  CHANGELOG.md  PhysicsFlow_PitchDeck_v130.docx  PhysicsFlow_PitchDeck_v200.docx  PhysicsFlow_PitchDeck_v201.docx  PhysicsFlow_UserManual_v130.docx  PhysicsFlow_UserManual_v200.docx  README.md  build_pitchdeck.py  build_usermanual.py
.github/workflows/: ci.yml  release.yml
desktop/: PhysicsFlow.sln
desktop/src/PhysicsFlow.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PhysicsFlow.App.csproj
desktop/src/PhysicsFlow.App/Converters/: ActiveColorConverter.cs
desktop/src/PhysicsFlow.App/Resources/: Colors.xaml  Styles.xaml  ViewDataTemplates.xaml
desktop/src/PhysicsFlow.App/Views/AIAssistant/: AIAssistantView.xaml  AIAssistantView.xaml.cs  ChatMessageView.xaml  ChatMessageView.xaml.cs
desktop/src/PhysicsFlow.App/Views/Dashboard/: DashboardView.xaml  DashboardView.xaml.cs
desktop/src/PhysicsFlow.Core/: PhysicsFlow.Core.csproj
desktop/src/PhysicsFlow.Infrastructure/: GrpcEngineClient.cs  PhysicsFlow.Infrastructure.csproj
desktop/src/PhysicsFlow.Infrastructure/Agent/: OllamaAgentClient.cs
desktop/src/PhysicsFlow.Infrastructure/Data/: AppDbService.cs  PhysicsFlowDbContext.cs
desktop/src/PhysicsFlow.Infrastructure/Engine/: EngineManager.cs
desktop/src/PhysicsFlow.Infrastructure/Export/: ExcelExportService.cs  IExcelExportService.cs
desktop/src/PhysicsFlow.Infrastructure/Proto/: agent.proto
desktop/src/PhysicsFlow.Infrastructure/Reports/: IReportService.cs  ReportService.cs
desktop/src/PhysicsFlow.ViewModels/: AIAssistantViewModel.cs  CrossSectionViewModel.cs  DashboardViewModel.cs  ForecastViewModel.cs  HistoryMatchingViewModel.cs  MainWindowViewModel.cs  PhysicsFlow.ViewModels.csproj  ProjectSetupViewModel.cs  ReservoirView3DViewModel.cs  SettingsViewModel.cs  TrainingViewModel.cs
desktop/tests/PhysicsFlow.ViewModels.Tests/: CrossSectionViewModelTests.cs  DashboardViewModelTests.cs  ForecastViewModelTests.cs  HistoryMatchingViewModelTests.cs  PhysicsFlow.ViewModels.Tests.csproj  ProjectSetupViewModelTests.cs  ReservoirView3DViewModelTests.cs  TrainingViewModelTests.cs  UnitTest1.cs
engine/: .dockerignore  .env.example  Dockerfile  PhysicsFlow_UserManual_v201.docx  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_direct_answer.py
engine/docker/: init_pg.sql
engine/physicsflow/: __init__.py  config.py  server.py
engine/physicsflow/agent/: context_provider.py  reservoir_agent.py  tools.py
engine/physicsflow/api/: __init__.py  app.py  auth.py  schemas.py
engine/physicsflow/api/routes/: __init__.py  agent.py  health.py  history_matching.py  io.py  models.py  projects.py  runs.py  simulation.py  tnavigator.py  training.py
engine/physicsflow/cli/: __init__.py  encrypt_cmd.py
engine/physicsflow/core/: grid.py  pvt.py  wells.py
engine/physicsflow/db/: __init__.py  database.py  db_service.py  models.py  repositories.py
engine/physicsflow/history_matching/: areki_jax.py  localisation_jax.py  priors.py
engine/physicsflow/io/: __init__.py  crypto.py  eclipse_reader.py  las_reader.py  project.py  tnavigator_bridge.py
engine/physicsflow/kg/: __init__.py  builder.py  graph.py  pipeline.py  query_engine.py  serializer.py
engine/physicsflow/proto/: agent_pb2.py  agent_pb2_grpc.py  history_matching.proto  history_matching_pb2.py  history_matching_pb2_grpc.py  simulation.proto  simulation_pb2.py  simulation_pb2_grpc.py
engine/physicsflow/rag/: __init__.py  context_builder.py  document_processor.py  indexer.py  pipeline.py  query_processor.py  reranker.py  retriever.py  sparse_store.py  vector_store.py
engine/physicsflow/services/: __init__.py  agent_service.py  hm_service.py  simulation_service.py
engine/physicsflow/surrogate/: __init__.py  ccr.py  fno.py
engine/physicsflow/training/: __init__.py  pretrain_norne.py
engine/tests/: __init__.py  test_grid.py  test_kalman.py  test_localisation.py  test_material_balance.py  test_pvt.py  test_wells.py
installer/: PhysicsFlow.Bundle.wxs  PhysicsFlow.wxs  build.ps1
spaces/: README.md  app.py  requirements.txt
(+21 files in other folders)
